--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -298,7 +298,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="g9K-xy-TbU" firstAttribute="leading" secondItem="Edm-WC-vXN" secondAttribute="leading" constant="6" id="0Ty-8M-Haq"/>
                                             <constraint firstItem="iIW-ZV-8T9" firstAttribute="leading" secondItem="Edm-WC-vXN" secondAttribute="leading" constant="6" id="85U-vF-3dY"/>
@@ -413,7 +413,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="DO0-nm-UMg" firstAttribute="top" secondItem="kkN-d7-O7A" secondAttribute="bottom" constant="6" id="0F7-Vo-rvA"/>
                                             <constraint firstItem="Yyz-Oi-YH5" firstAttribute="top" secondItem="InY-Rx-amN" secondAttribute="bottom" constant="6" id="4K8-7s-dVR"/>
@@ -463,7 +463,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="SxH-ax-NTn" firstAttribute="top" secondItem="3O7-OA-YQt" secondAttribute="top" constant="8" id="bph-68-tJ3"/>
                                             <constraint firstItem="SxH-ax-NTn" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="8" id="vRF-Zb-4J0"/>
@@ -638,12 +638,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
