--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bY-vm-wy6">
                                         <rect key="frame" x="6" y="6" width="381" height="40"/>
-                                        <color key="backgroundColor" red="0.84978213076693832" green="0.86248871774384472" blue="0.70361919031884435" alpha="0.09994213786346233" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.8196719352116697" green="0.8319282917061237" blue="0.67868796306672574" alpha="0.09994213786346233" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="OLg-ng-fxA"/>
                                         </constraints>
@@ -252,7 +252,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Edm-WC-vXN">
                                         <rect key="frame" x="8" y="258" width="200" height="259"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IngredientsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="UEa-2n-VZ5">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.25" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IngredientsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="UEa-2n-VZ5">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="259"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d6p-wr-mTz">
@@ -508,7 +508,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H2P-Ws-kNH">
                                         <rect key="frame" x="214" y="258" width="173" height="259"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeasureBackground" translatesAutoresizingMaskIntoConstraints="NO" id="WnL-tU-8Cx">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeasureBackground" translatesAutoresizingMaskIntoConstraints="NO" id="WnL-tU-8Cx">
                                                 <rect key="frame" x="0.0" y="0.0" width="173" height="259"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yYv-eq-rkc">
@@ -770,23 +770,62 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3O7-OA-YQt">
                                         <rect key="frame" x="6" y="523" width="381" height="236"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxH-ax-NTn">
-                                                <rect key="frame" x="8" y="8" width="129" height="60"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="QHi-PO-f0a"/>
-                                                    <constraint firstAttribute="width" constant="129" id="gQb-R3-lkQ"/>
-                                                </constraints>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mYx-wn-iN8">
+                                                <rect key="frame" x="16" y="16" width="349" height="204"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Click for the recipe"/>
+                                                <buttonConfiguration key="configuration" style="plain" imagePlacement="top">
+                                                    <imageReference key="image" image="cursor.rays" catalog="system" symbolScale="large"/>
+                                                    <attributedString key="attributedTitle">
+                                                        <fragment content="click">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" metaFont="system" size="30"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                        <fragment content=" ">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" size="30" name="STIXIntegralsD-Regular"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                        <fragment content="for">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" metaFont="system" size="30"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                        <fragment content=" ">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" size="30" name="STIXIntegralsD-Regular"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                        <fragment content="recipe">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                <font key="NSFont" metaFont="system" size="30"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <color key="baseForegroundColor" systemColor="systemRedColor"/>
+                                                </buttonConfiguration>
                                                 <connections>
-                                                    <action selector="recipeShowButton:" destination="VxW-bQ-wca" eventType="touchUpInside" id="7Rw-WJ-N8K"/>
+                                                    <action selector="recipeShowButton:" destination="VxW-bQ-wca" eventType="touchUpInside" id="Br0-aq-usC"/>
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                         <constraints>
-                                            <constraint firstItem="SxH-ax-NTn" firstAttribute="top" secondItem="3O7-OA-YQt" secondAttribute="top" constant="8" id="bph-68-tJ3"/>
-                                            <constraint firstItem="SxH-ax-NTn" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="8" id="vRF-Zb-4J0"/>
+                                            <constraint firstAttribute="trailing" secondItem="mYx-wn-iN8" secondAttribute="trailing" constant="16" id="ZRj-Zy-mQY"/>
+                                            <constraint firstItem="mYx-wn-iN8" firstAttribute="leading" secondItem="3O7-OA-YQt" secondAttribute="leading" constant="16" id="kbr-JH-vty"/>
+                                            <constraint firstItem="mYx-wn-iN8" firstAttribute="top" secondItem="3O7-OA-YQt" secondAttribute="top" constant="16" id="s5d-pz-qf8"/>
+                                            <constraint firstAttribute="bottom" secondItem="mYx-wn-iN8" secondAttribute="bottom" constant="16" id="uIq-gt-crv"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -840,7 +879,7 @@
                         <outlet property="measureLabel7" destination="Yyz-Oi-YH5" id="Wz9-M9-FnI"/>
                         <outlet property="measureView" destination="H2P-Ws-kNH" id="kyI-Mw-Yuy"/>
                         <outlet property="nameLabel" destination="3bY-vm-wy6" id="PZb-Pr-17p"/>
-                        <outlet property="recibeButton" destination="SxH-ax-NTn" id="l21-82-los"/>
+                        <outlet property="recipeButton" destination="mYx-wn-iN8" id="Q11-ca-uL4"/>
                         <outlet property="recipeView" destination="3O7-OA-YQt" id="4rP-Rg-hP9"/>
                         <outlet property="ıngredientImageView" destination="UEa-2n-VZ5" id="Ysx-yg-xLD"/>
                         <outlet property="ıngredientLabel1" destination="k9k-AT-5X5" id="8jX-0T-nZd"/>
@@ -949,6 +988,7 @@
     <resources>
         <image name="IngredientsBackground" width="736" height="727"/>
         <image name="MeasureBackground" width="451" height="531"/>
+        <image name="cursor.rays" catalog="system" width="128" height="119"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="rectangle.split.2x2.fill" catalog="system" width="128" height="93"/>
         <image name="rectangle.split.3x3.fill" catalog="system" width="128" height="93"/>
@@ -958,6 +998,15 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
