--- a/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
+++ b/CocktailApp/Api/Module/CategoryCell/CategoryCell.xib
@@ -18,17 +18,15 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-ww-FeT">
-                        <rect key="frame" x="4" y="4" width="142" height="142"/>
+                        <rect key="frame" x="25" y="25" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="dyi-ww-FeT" secondAttribute="height" multiplier="1:1" id="9N8-T2-lAh"/>
+                            <constraint firstAttribute="width" constant="100" id="TA1-1w-YVr"/>
+                            <constraint firstAttribute="height" constant="100" id="hYN-w9-sOY"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
-                        <rect key="frame" x="4" y="150" width="142" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="NCQ-lB-wR6"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Xal-PS-FWJ">
+                        <rect key="frame" x="8" y="133" width="134" height="23"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -36,13 +34,13 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="dyi-ww-FeT" secondAttribute="trailing" constant="4" id="1yi-91-Rce"/>
-                <constraint firstAttribute="trailing" secondItem="Xal-PS-FWJ" secondAttribute="trailing" constant="4" id="LBp-na-vFZ"/>
-                <constraint firstItem="Xal-PS-FWJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="R0l-L4-pNO"/>
-                <constraint firstItem="dyi-ww-FeT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="WGH-wZ-DoN"/>
-                <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" constant="4" id="dT6-Fk-KBn"/>
-                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" id="jbt-4u-smv"/>
-                <constraint firstItem="dyi-ww-FeT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="mPd-Sh-CWc"/>
+                <constraint firstAttribute="trailing" secondItem="dyi-ww-FeT" secondAttribute="trailing" constant="25" id="1wY-vu-Yqa"/>
+                <constraint firstAttribute="trailing" secondItem="Xal-PS-FWJ" secondAttribute="trailing" constant="8" id="30F-vu-vTI"/>
+                <constraint firstItem="dyi-ww-FeT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="25" id="Ct6-3m-7Ee"/>
+                <constraint firstItem="Xal-PS-FWJ" firstAttribute="top" secondItem="dyi-ww-FeT" secondAttribute="bottom" constant="8" id="EI0-8K-n55"/>
+                <constraint firstItem="dyi-ww-FeT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="25" id="bEC-W3-7gc"/>
+                <constraint firstAttribute="bottom" secondItem="Xal-PS-FWJ" secondAttribute="bottom" constant="24" id="ifS-4h-qbj"/>
+                <constraint firstItem="Xal-PS-FWJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="wdv-Wn-5XB"/>
             </constraints>
             <size key="customSize" width="150" height="180"/>
             <connections>
