--- a/CocktailApp/Base.lproj/Main.storyboard
+++ b/CocktailApp/Base.lproj/Main.storyboard
@@ -117,14 +117,14 @@
             <objects>
                 <viewController storyboardIdentifier="DetailsViewController" id="VxW-bQ-wca" customClass="DetailsViewController" customModule="CocktailApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h4k-nd-FIY">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1126"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryo-Ju-P0R">
-                                <rect key="frame" x="0.0" y="59" width="425" height="759"/>
+                                <rect key="frame" x="0.0" y="59" width="425" height="1033"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nvW-BV-JyJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="425" height="684"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="425" height="892"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="umH-qY-qYH" userLabel="TitleView">
                                                 <rect key="frame" x="16" y="8" width="393" height="44"/>
@@ -177,6 +177,18 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="361" placeholderIntrinsicHeight="200" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="w1q-NE-leB" userLabel="MeasureStackView">
                                                 <rect key="frame" x="16" y="476" width="393" height="200"/>
                                             </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="361" placeholderIntrinsicHeight="200" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PDU-TI-fPJ" userLabel="RecipesStackView">
+                                                <rect key="frame" x="16" y="684" width="393" height="200"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdS-7o-HV9">
+                                                        <rect key="frame" x="8" y="8" width="377" height="184"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
+                                            </stackView>
                                         </subviews>
                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                     </stackView>
@@ -199,18 +211,20 @@
                             <constraint firstItem="ryo-Ju-P0R" firstAttribute="top" secondItem="NGr-dL-AOc" secondAttribute="top" id="m0z-Za-dTM"/>
                         </constraints>
                     </view>
-                    <size key="freeformSize" width="393" height="852"/>
+                    <size key="freeformSize" width="393" height="1126"/>
                     <connections>
                         <outlet property="cocktailInfoStackView" destination="ouz-7u-OXu" id="jRR-bn-F0g"/>
                         <outlet property="imageView" destination="VEe-Ss-WEw" id="oWn-EX-SwI"/>
                         <outlet property="ingredientsStackView" destination="I6p-uZ-fGy" id="Hup-QQ-9cv"/>
                         <outlet property="measureStackView" destination="w1q-NE-leB" id="P6Q-Kc-K5r"/>
+                        <outlet property="recipeLabel" destination="fdS-7o-HV9" id="Jyg-wp-m19"/>
+                        <outlet property="recipesStackView" destination="PDU-TI-fPJ" id="p8I-jA-lIY"/>
                         <outlet property="titleLabel" destination="b1b-qH-7a3" id="Iak-40-04V"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVj-aV-wPu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3238.9312977099235" y="-442.25352112676057"/>
+            <point key="canvasLocation" x="3238.9312977099235" y="-341.54929577464793"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="tCw-wf-Ekm">
